--- a/index.html
+++ b/index.html
@@ -3,40 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>calculator</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="calculator">
         <div class="display" id="display">0</div>
         <div class="buttons">
-            <div class="btn" onClick="clearDisplay()">C</div>
-            <div class="btn" onClick="appendToDisplay('(')">(</div>
-            <div class="btn" onClick="appendToDisplay(')')">)</div>
-            <div class="btn operator" onClick="appendToDisplay('/')">/</div>
+            <button class="btn" onclick="clearDisplay()">C</button>
+            <button class="btn" onclick="appendToDisplay('(')">(</button>
+            <button class="btn" onclick="appendToDisplay(')')">)</button>
+            <button class="btn operator" onclick="appendToDisplay('/')">/</button>
 
-            <div class="btn" onClick="appendToDisplay('7')">7</div>
-            <div class="btn" onClick="appendToDisplay('8')">8</div>
-            <div class="btn" onClick="appendToDisplay('9')">9</div>
-            <div class="btn operator" onClick="appendToDisplay('*')">*</div>
+            <button class="btn" onclick="appendToDisplay('7')">7</button>
+            <button class="btn" onclick="appendToDisplay('8')">8</button>
+            <button class="btn" onclick="appendToDisplay('9')">9</button>
+            <button class="btn operator" onclick="appendToDisplay('*')">*</button>
 
-            <div class="btn" onClick="appendToDisplay('4')">4</div>
-            <div class="btn" onClick="appendToDisplay('5')">5</div>
-            <div class="btn" onClick="appendToDisplay('6')">6</div>
-            <div class="btn operator" onClick="appendToDisplay('-')">-</div>
+            <button class="btn" onclick="appendToDisplay('4')">4</button>
+            <button class="btn" onclick="appendToDisplay('5')">5</button>
+            <button class="btn" onclick="appendToDisplay('6')">6</button>
+            <button class="btn operator" onclick="appendToDisplay('-')">-</button>
 
-            <div class="btn" onClick="appendToDisplay('1')">1</div>
-            <div class="btn" onClick="appendToDisplay('2')">2</div>
-            <div class="btn" onClick="appendToDisplay('3')">3</div>
-            <div class="btn operator" onClick="appendToDisplay('+')">+</div>
+            <button class="btn" onclick="appendToDisplay('1')">1</button>
+            <button class="btn" onclick="appendToDisplay('2')">2</button>
+            <button class="btn" onclick="appendToDisplay('3')">3</button>
+            <button class="btn operator" onclick="appendToDisplay('+')">+</button>
 
-            <div class="btn" onClick="appendToDisplay('0')">0</div>
-            <div class="btn" onClick="appendToDisplay('.')">.</div>
-            <div class="btn equal" onClick="calcResult()">=</div>
-
-
+            <button class="btn" onclick="appendToDisplay('0')">0</button>
+            <button class="btn" onclick="appendToDisplay('.')">.</button>
+            <button class="btn equal" onclick="calculateResult()">=</button>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="test.js"></script>
 </body>
 </html>
