Update index.html and script.js with some changes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <button class="btn" onclick="appendToDisplay('7')">7</button>
             <button class="btn" onclick="appendToDisplay('8')">8</button>
             <button class="btn" onclick="appendToDisplay('9')">9</button>
-            <button class="btn operator" onclick="appendToDisplay('*')">*</button>
+            <button class="btn operator" onclick="appendToDisplay('*')">x</button>
 
             <button class="btn" onclick="appendToDisplay('4')">4</button>
             <button class="btn" onclick="appendToDisplay('5')">5</button>
@@ -35,6 +35,6 @@
             <button class="btn equal" onclick="calculateResult()">=</button>
         </div>
     </div>
-    <script src="test.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
